--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=
-SECRET_KEY=
+MONGODB_URL=mongodb+srv://bd_user:bduser@cluster0-02jjc.mongodb.net/task?retryWrites=true&w=majority
+SECRET_KEY=YXV0ZW50aWNhw6fDo292aWF0b2tlbg==
