--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.9.10",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
