mudança docke-compose e rotas

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-MONGODB_URL=
+MONGODB_URL=mongodb://bd_user:bduser@localhost:27020/?authSource=admin
+SECRET_KEY=YXV0ZW50aWNhw6fDo292aWF0b2tlbg==
+MONGO_INITDB_ROOT_USERNAME=bd_user
+MONGO_INITDB_ROOT_PASSWORD=bduser
+MONGO_PORT=27020
+API_PORT=3333
