--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,29 @@
 version: "3"
- 
 
+networks: 
+    mongo_app_network:
+      driver: bridge    
 services:
-  app:
-    build: .
-    command: npm start
-    ports:   
-      - "3333:3333"
-    volumes: 
-      - ./:/usr/app  
+    mongo:
+      container_name: mongodb  
+      image: mongo
+      restart: always
+      environment:
+        MONGO_INITDB_ROOT_USERNAME: "${MONGO_INITDB_ROOT_USERNAME}"
+        MONGO_INITDB_ROOT_PASSWORD: "${MONGO_INITDB_ROOT_PASSWORD}"
+      ports: 
+        - "${MONGO_PORT}:27017"  
+      networks: 
+        - mongo_app_network    
+    app:
+      container_name: api_node_docker  
+      build: .
+      command: npm start
+      volumes: 
+        - ./:/usr/app
+      ports: 
+        - "${API_PORT}:3333"
+      networks: 
+        - mongo_app_network
+      depends_on:
+        - mongo               
